--- a/projeto/style/style.css
+++ b/projeto/style/style.css
@@ -72,7 +72,7 @@ header{
 main{
     padding: 20px 50px;
 
-    display: flex;
+    display: block;
     background-color: #ecf3ff;
     height: 100vh;
 }
@@ -83,7 +83,7 @@ main{
 ##############################################*/
 .cdi{
     font-weight: bold;
-    font-size: 1.3em;
+    font-size: 1.8em;
 
     width: 100%;
 
@@ -97,4 +97,57 @@ main{
     font-size: 1.1em;
 
     display: inline;
+}
+
+/*##############################################
+                CALCULADORA
+##############################################*/
+
+#calc{
+    display: flex;
+
+    width: 100%;
+    padding: 50px 20px;
+
+    align-items: center;
+    justify-content: center;
+
+}
+
+#calc_form{
+    background-color: var(--blue-color);
+    padding: 40px;
+
+    border-radius: 10px;
+    box-shadow: 0px 0px 20px 2px #0000003b;
+}
+#calc_form label{
+    font-size: 1.2em;
+    font-weight: 600;
+
+    color: var(--light-color);
+}
+#calc_form input[type="number"]{
+    margin-bottom: 10px;
+
+    width: 100%;
+    height: 30px;
+
+    font-size: 1.2em; 
+}
+
+#calc_form input[type='button']{
+    width: 100%;
+
+    margin-top: 30px;
+    padding: 5px;
+
+    font-size: 1.1em;
+    font-weight: 500;
+
+    border-radius: 0px;
+    border: none;
+
+    background-color: var(--light-color);
+    cursor: pointer;
 }
